5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1638_2730.log
== SUBMITION (2019-04-11 11:31:21) 
-- CODE:
x=float(input())
y=float(input())

if(y>0):
	print("Superiores")
else(y<0):
	print("Inferiores")


-- EXECUTION TIME:
0.150554
-- ERROR:
  File "/home/codebench/codes/1638/2730/main.py", line 6
    else(y<0):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:31:27) 
-- CODE:
x=float(input())
y=float(input())

if(y>0):
	print("Superiores")
else(y<0):
	print("Inferiores")


-- ERROR:
File "XXXX", line 6
    else(y<0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:32:04) 
-- CODE:
x=float(input())
y=float(input())

if(y>0):
	print("Superiores");
else (y<0):
	print("Inferiores")


-- ERROR:
File "XXXX", line 6
    else (y<0):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:32:31) 
-- CODE:
x=float(input())
y=float(input())

if(y>0):
	print("Superiores");
if (y<0):
	print("Inferiores")


-- EXECUTION TIME:
0.304929
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
